--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "testcafe": "^1.8.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test-cafe": "./node_modules/.bin/testcafe",
     "eject": "react-scripts eject",
     "server": "node server.js",
     "server-dev": "nodemon server.js"
